--- a/src/app/core/core.component.html
+++ b/src/app/core/core.component.html
@@ -1,3 +1,5 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+<button class="btn btn-primary" (click)="openModal()">Open Modal</button>
+<app-modal></app-modal>
 
