--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,59 +1,88 @@
 .navbar {
-  background-color: #333;
-  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 10px;
+  background-color:  rgb(0, 0, 0);
+  color: #fd0000f7;
 }
-.navbar a {
+
+.brand {
+  font-size: 26px;
+  font-weight: bold;
+  font-family: "Fantasy";
+}
+
+.topnav a {
   float: left;
-  display: block;
-  color: white;
+  display: flex;
+  color: #ff0000;
   text-align: center;
-  padding: 10px;
-  text-decoration: none;
+  padding: 15px 17px;
+  font-weight: bold;
+  font-size: 17px;
+  font-family: "Fantasy";
 }
-.navbar a:hover {
-  background-color: #ddd;
-  color: rgba(0, 0, 0, 0.503);
 
-  .brand {
-    font-size: 15px;
-    font-weight: bold;
-  }
+.topnav a:hover {
+  background-color: #f5fab1e2;
+  color: rgb(255, 3, 3);
+}
 
-  .search-bar {
-    input[type='text'] {
-      padding: 5px;
-      border: 1px solid #ccc;
-      border-radius: 3px;
-    }
-    button {
-      padding: 5px 10px;
-      background-color: #555;
-      color: white;
-      border: none;
-      border-radius: 3px;
-      cursor: pointer;
-    }
-  }
+.search-bar {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
 
-  .login-section {
-    display: flex;
-    align-items: center;
+.search-bar input[type="text"] {
+  padding: 5px;
+  border: outset rgba(15, 65, 245, 0.385);
+  border-radius: 5px;
+}
 
-    input[type='text'],
-    input[type='password'] {
-      padding: 5px;
-      margin-right: 5px;
-      border: 1px solid #ccc;
-      border-radius: 3px;
-    }
+.search-btn {
+  padding: 8px 15px;
+  background-color: #09e83da0;
+  border: outset rgba(9, 16, 231, 0.344);
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s;
 
-    button {
-      padding: 5px 10px;
-      background-color: #555;
-      color: white;
-      border: none;
-      border-radius: 3px;
-      cursor: pointer;
-    }
+&:hover {
+  background-color: #e67e22;
+}
+
+.user-actions {
+  display: flex;
+  align-items: center;
+  gap: 15px
+}
+}
+
+.signup-btn {
+  padding: 8px 15px;
+  background-color: #e42510;
+  border: outset rgba(9, 16, 231, 0.344);
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: #e67e22;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
