--- a/src/app/core/core.component.html
+++ b/src/app/core/core.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+<app-signup></app-signup>
 <button class="btn btn-primary" (click)="openModal()">Open Modal</button>
 <app-modal></app-modal>
 <ngx-spinner
